fix layout bug and add eventlistener to Homepage and Archiv

--- a/src/style.css
+++ b/src/style.css
@@ -55,9 +55,9 @@ body {
     --secondary-color: #042A2B;
     --tertiary-color: #A7A7A9;
     --button-color: #556F44;
+    --button-color-dark: #415534;
     --border-color: #797270;
     --overdue-color: #D63230;
-    height: 100vh;
 }
 
 header, footer {
@@ -65,6 +65,7 @@ header, footer {
     height: 40px;
     background-color: var(--secondary-color);
     border: 2px solid var(--border-color);
+    color: white;
 }
 
 header {
@@ -79,10 +80,8 @@ header {
     margin-bottom: 40px;
     display: grid;
     grid-template-columns: minmax(150px, 250px) minmax(500px, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-rows: minmax(calc(100vh - 80px), auto);
     background-color: var(--primary-color);
-    height: calc(100%-80px);
-    overflow: auto;
 }
 
 .columnGrid {
@@ -107,7 +106,8 @@ header {
 }
 
 #mainArea {
-    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .MainAreaHeader {
@@ -128,6 +128,7 @@ header {
     padding: 10px 30px;
     gap: 10px;
     flex: 1;
+    overflow: auto;
 }
 
 .mainHeader {
@@ -219,4 +220,45 @@ footer {
 
 .toDoTitle {
     font-size: 1.5rem;
+}
+
+.button {
+  align-items: center;
+  appearance: none;
+  background-color: var(--button-color);
+  background-image: linear-gradient(1deg, var(--button-color-dark), var(--button-color) 99%);
+  background-size: calc(100% + 20px) calc(100% + 20px);
+  border-radius: 100px;
+  border-width: 0;
+  box-shadow: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: CircularStd,sans-serif;
+  font-size: 1rem;
+  height: auto;
+  justify-content: center;
+  line-height: 1.5;
+  padding: 6px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color .2s,background-position .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: top;
+  white-space: nowrap;
+}
+
+.button:active,
+.button:focus {
+  outline: none;
+}
+
+.button:hover {
+  background-position: -20px -20px;
+}
+
+.button:focus:not(:active) {
+  box-shadow: rgba(40, 170, 255, 0.25) 0 0 0 .125em;
 }
